Revert "Testing removal of topic config customizations and retries"
This reverts commit 8a05c1ab7b7d0e8feab736fe11a9f74c8a22dc0d.